# EngineCpp

./: .gitignore  CMakeLists.txt  README.md  generate.js  keyFrameTest.json
.cache/clangd/index/: CachedExpression.cpp.743DE3C9EEF997DB.idx  CachedExpression.h.ED2A6C97B27113CD.idx  Camera.cpp.5DC3BEB0B9B7742C.idx  Camera.h.09E84C78CE976147.idx  CoreUtils.cpp.F88BEBB411DBFC75.idx  CoreUtils.h.C042EB56C111D9E5.idx  Engine.cpp.D74C556F2F8CD3E4.idx  Engine.h.D43AF2CC86BC55F1.idx  ExpressTool.cpp.FF83CC89350FFF11.idx  ExpressTool.h.71263E9F7CC389D0.idx  ExpressionCache.cpp.B10688DFD84717C4.idx  ExpressionCache.h.583D11D8D653472F.idx  FFmpegWriter.cpp.F18535EECB582768.idx  FFmpegWriter.h.2B0B16B52CEC9CFD.idx  ImageResource.cpp.2C31C0DFDB73C84D.idx  ImageResource.h.092A7DF8E0901731.idx  Keyframe.cpp.2119BDB8DD7FEDEF.idx  Keyframe.h.85F51FA64A293E13.idx  Main.cpp.62C6564BC7A6289B.idx  Materials.cpp.B4F967854A018D0C.idx  Materials.h.B55D6369D77193B2.idx  PluginRenderer.cpp.1837C330F7E18932.idx  PluginRenderer.h.21C7F16FC2A28D98.idx  RenderPass.cpp.C58F790FA1D4831D.idx  RenderPass.h.A94083717CE57B09.idx  RenderTargetPool.cpp.630B931240283674.idx  RenderTargetPool.h.BEDB59A0E2417B06.idx  RendererResource.cpp.F4B1707C142EA101.idx  RendererResource.h.4C8CFDA1C6458C4F.idx  ScopedProfiler.cpp.F9872A2FEDA9AEB7.idx  ScopedProfiler.h.BE3BF0B6A2814A27.idx  ShaderManager.cpp.37D3D735660FC986.idx  ShaderManager.h.EBA6F6E494BCC02D.idx  TextResource.cpp.67AA4542D41B75B2.idx  TextResource.h.261C6F24D2F8D9EA.idx  TrackUtils.cpp.0D92DB1EA4755BDC.idx  TrackUtils.h.791DD71DBB66A677.idx  TransitionRenderer.cpp.BEC01429089B9E01.idx  TransitionRenderer.h.82DF2F05EC2D378E.idx  VideoRenderer.cpp.DBBBA94687FC55C4.idx  (+230 more)
cpp/: CoreUtils.cpp  CoreUtils.h  Engine.cpp  Engine.h  Keyframe.cpp  Keyframe.h  Main.cpp  TrackUtils.cpp  TrackUtils.h
cpp/nanovg/: nanovg_gl.h  nanovg_impl.c
cpp/src/: CachedExprtk.cpp  CachedExprtk.h  Camera.cpp  Camera.h  ExpressTool.cpp  ExpressTool.h  ExpressionCache.cpp  ExpressionCache.h  FFmpegWriter.cpp  FFmpegWriter.h  ImageResource.cpp  ImageResource.h  Materials.cpp  Materials.h  PluginRenderer.cpp  PluginRenderer.h  RenderPass.cpp  RenderPass.h  RenderTargetPool.cpp  RenderTargetPool.h  RendererResource.cpp  RendererResource.h  ScopedProfiler.cpp  ScopedProfiler.h  ShaderManager.cpp  ShaderManager.h  TextResource.cpp  TextResource.h  TransitionRenderer.cpp  TransitionRenderer.h  VideoRenderer.cpp  VideoRenderer.h  VideoResource.cpp  VideoResource.h  VideoResourceGpu.cpp  VideoResourceGpu.h
shader/: blurFragment.glsl  blurVertex.glsl  fragment.glsl  loadingFragment.glsl  loadingVertex.glsl  outlineFragment.glsl  outlineVertex.glsl  smoothFragment.glsl  standFragment.glsl  standVertex.glsl  vertex.glsl
test/: track.json
thirdPart/ffmpeg/include/libavutil/: ffversion.h
thirdPart/ffmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc
thirdPart/freetype/: freetype.lib
thirdPart/glad/include/glad/: glad.h
thirdPart/glad/src/: glad.c
thirdPart/glm/: glm.lib
